--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
 
    <div class="row  justify-content-center  main-btn col-12">
-   <button href="" class="btn btn-outline-success animated infinite flash slower btnArabic col-lg-3 col-md-5 col-sm-10" >القائمة بالعربية</button>
-   <button href="" class="btn btn-outline-danger animated infinite flash slower btnEng col-lg-3 col-md-5 col-sm-10"> English Menu  </button>
+   <button href="" class="btn btn-outline-success     btnArabic col-lg-3 col-md-5 col-sm-10" >القائمة بالعربية</button>
+   <button href="" class="btn btn-outline-danger     btnEng col-lg-3 col-md-5 col-sm-10"> English Menu  </button>
    </div>
 
 
@@ -100,7 +100,7 @@
     <img src="img/Hot drink/menu_Page_10.jpg" width="100%" height="100%" alt="Main Deshes 1" class="img">
         </div>
     
-        <h1 class="text-center title mt-5"> الشيشة</h1>
+        <h1 class="text-center title mt-5"> shesha</h1>
         <div class="one container">
     <img src="img/shesha/menu_Page_28.jpg" width="100%" height="100%" alt="Main Deshes 1" class="img">
         </div>
