--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
 
    <div class="row  justify-content-center  main-btn col-12">
-   <button href="" class="btn btn-outline-success     btnArabic col-lg-3 col-md-5 col-sm-10" >القائمة بالعربية</button>
-   <button href="" class="btn btn-outline-danger     btnEng col-lg-3 col-md-5 col-sm-10"> English Menu  </button>
+   <button href="" class="btn btn-outline-primary     btnArabic col-lg-3 col-md-5 col-sm-10" >القائمة بالعربية</button>
+   <button href="" class="btn btn-info     btnEng col-lg-3 col-md-5 col-sm-10"> English Menu  </button>
    </div>
 
 
