--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="css/animate.min.css">
 </head>
 <body>
+<div class="img2  col-12">
+</div>
 
    <div class="row  justify-content-center  main-btn col-12">
    <button href="" class="btn btn-primary     btnArabic col-lg-3 col-md-5 col-sm-10" >القائمة بالعربية</button>
