--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <img src="img/Hot drink/menu_Page_10.jpg" width="100%" height="100%" alt="Main Deshes 1" class="img">
         </div>
     
-        <h1 class="text-center title mt-5"> shesha</h1>
+        <h1 class="text-center title mt-5"> shisha</h1>
         <div class="one container">
     <img src="img/shesha/menu_Page_28.jpg" width="100%" height="100%" alt="Main Deshes 1" class="img">
         </div>
